--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
     </style>
 </head>
 <body>
-
+    <div id="loginBox">
+        <input id="accountInput">
+        <button onclick="login()">登入</button>
+        <p id="loginMsg"></p>
+    </div>
+    
     <h1>🎵 ESP32 鋼琴挑戰 (測試版)</h1>
+    <h2>👤 玩家：<span id="userName">尚未登入</span></h2>
 
     <div class="box">
         <h3>1. 裝置連線與測試</h3>
@@ -252,6 +258,40 @@
             stopGame();
         }, 500);
     }
+    <script>
+  // ===== 原本就有的 JS =====
+  let ledChar = null;
+  let USERS = {};
+
+  fetch("users.json")
+    .then(res => res.json())
+    .then(data => { USERS = data; });
+
+  // ===== 你現在要加的 =====
+  function login() {
+    const acc = document.getElementById("accountInput").value.trim();
+    const msg = document.getElementById("loginMsg");
+
+    if (!acc) {
+      msg.innerText = "請輸入編號";
+      return;
+    }
+
+    if (!USERS[acc]) {
+      msg.innerText = "此編號不存在";
+      return;
+    }
+
+    localStorage.setItem("userId", acc);
+    localStorage.setItem("userName", USERS[acc].name);
+
+    document.getElementById("userName").innerText = USERS[acc].name;
+
+    document.getElementById("loginBox").style.display = "none";
+    document.getElementById("app").style.display = "block";
+  }
+</script>
+
 </script>
 </body>
 </html>
