--- a/index.html
+++ b/index.html
@@ -81,9 +81,84 @@
     <div class="box" id="controlBox">
         <h3>2. 選擇關卡 (遊戲開始)</h3>
         <select id="songSelect" style="padding: 10px; font-size: 16px; width: 80%;">
-            <option value="3,2,1,2,3,3,3,2,2,2,3,5,5,3,2,1,2,3,3,3,3,2,2,3,2,1">瑪莉有隻小綿羊</option>
-            <option value="5,3,3,4,2,2,1,2,3,4,5,5,5,2,2,2,2,2,3,4,3,3,3,3,3,4,5,5,3,3,4,2,2,1,3,5,5,1">小蜜蜂</option>
-            <option value="1,2,3,4,5,5,4,3,2,1">音階測試</option>
+            <!-- 瑪莉有隻小綿羊（完整版） -->
+<option value="
+3,2,1,2,3,3,3,
+2,2,2,
+3,5,5,
+3,2,1,2,3,3,3,
+3,2,2,3,2,1
+">瑪莉有隻小綿羊（完整版）</option>
+
+<!-- 小星星（完整版） -->
+<option value="
+1,1,5,5,4,4,5,
+3,3,2,2,1,
+5,5,3,3,2,
+5,5,3,3,2,
+1,1,5,5,4,4,5,
+3,3,2,2,1
+">小星星（完整版）</option>
+
+<!-- 生日快樂（完整版） -->
+<option value="
+3,3,4,3,5,4,
+3,3,4,3,1,
+3,3,5,4,3,2,1,
+4,4,3,1,2,1
+">生日快樂（完整版）</option>
+
+<!-- 兩隻老虎（完整版） -->
+<option value="
+1,2,3,1,
+1,2,3,1,
+3,4,5,
+3,4,5,
+5,3,5,
+5,3,5,
+1,5,1
+">兩隻老虎（完整版）</option>
+
+<!-- 小蜜蜂（完整版） -->
+<option value="
+5,3,3,4,2,2,
+1,2,3,4,5,5,5,
+2,2,2,2,2,
+3,4,3,3,3,
+3,4,5,5,
+3,3,4,2,2,
+1
+">小蜜蜂（完整版）</option>
+
+<!-- 歡樂頌（完整版，五音域版） -->
+<option value="
+3,3,4,5,
+5,4,3,2,
+1,1,2,3,
+3,2,2,
+3,3,4,5,
+5,4,3,2,
+1,1,2,3,
+2,1,1
+">歡樂頌（完整版）</option>
+
+<!-- 音階上下完整練習 -->
+<option value="
+1,2,3,4,5,
+5,4,3,2,1,
+1,2,3,4,5,
+5,4,3,2,1
+">音階上下（完整版）</option>
+
+<!-- 分解和弦完整練習 -->
+<option value="
+1,3,5,3,
+1,3,5,3,
+2,4,5,4,
+2,4,5,4,
+1,3,5,3
+">分解和弦（完整版）</option>
+
         </select>
         <br><br>
         <button id="startBtn" class="btn-start" onclick="startGame()">開始遊戲！</button>
