--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         <button onclick="login()">登入</button>
         <p id="loginMsg"></p>
     </div>
+    <div style="margin-top:20px;">
+      <input id="newPlayerId" placeholder="編號 (如 12)">
+      <input id="newPlayerName" placeholder="姓名">
+      <button onclick="createPlayer()">新增玩家</button>
+      <p id="createMsg"></p>
+   </div>
+
   <div id="app" style="display:none;">
   
     <h1>🎵 ESP32 鋼琴挑戰 (測試版)</h1>
@@ -450,7 +457,35 @@ async function fetchUserById(id) {
     document.getElementById("app").style.display = "block";
   }
 }); 
+async function createPlayer(){
+  const id = document.getElementById("newPlayerId").value.trim();
+  const name = document.getElementById("newPlayerName").value.trim();
+  const msg = document.getElementById("createMsg");
 
+  if(!id || !name){
+    msg.innerText = "請輸入編號與姓名";
+    return;
+  }
+
+  const res = await fetch(`${SUPABASE_URL}/rest/v1/players`, {
+    method: "POST",
+    headers: {
+      apikey: SUPABASE_KEY,
+      Authorization: `Bearer ${SUPABASE_KEY}`,
+      "Content-Type": "application/json",
+      Prefer: "return=minimal"
+    },
+    body: JSON.stringify([{ id, name }])
+  });
+
+  if(!res.ok){
+    msg.innerText = "新增失敗（可能編號重複）";
+  }else{
+    msg.innerText = "新增成功！order_no 已自動產生";
+    document.getElementById("newPlayerId").value = "";
+    document.getElementById("newPlayerName").value = "";
+  }
+}
 </script>
 </body>
 </html>
