--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
   <button onclick="login()">登入</button>
   <p id="loginMsg"></p>
 </div>
+<div id="addBox" style="margin-top:20px;">
+  <h3 style="color:#fff;">➕ 新增人員</h3>
+
+  <div style="display:flex; gap:10px; justify-content:center; align-items:center; flex-wrap:wrap;">
+    <input id="newId" placeholder="自動編號" readonly style="width:160px; padding:8px;">
+    <input id="newName" placeholder="輸入姓名" style="width:200px; padding:8px;">
+    <button onclick="addPlayer()" style="padding:10px 18px;">儲存</button>
+  </div>
+
+  <p id="addMsg" style="margin-top:10px; color:#ffd966;"></p>
+</div>
 
   <div id="app" style="display:none;">
   
@@ -562,6 +573,65 @@ async function login() {
   }
 }
 
+async function loadNextId(){
+  const msg = document.getElementById("addMsg");
+  msg.innerText = "";
+
+  try{
+    const res = await fetch("/test/api/next_player_id.php", { cache:"no-store" });
+    if(!res.ok) throw new Error("next id api failed");
+    const data = await res.json();
+    document.getElementById("newId").value = data.next_id || "";
+  }catch(e){
+    console.error(e);
+    msg.innerText = "取得下一號失敗（請看 Console）";
+  }
+}
+async function addPlayer(){
+  const id = document.getElementById("newId").value.trim();
+  const name = document.getElementById("newName").value.trim();
+  const msg = document.getElementById("addMsg");
+
+  if(!id){ msg.innerText = "沒有自動編號"; return; }
+  if(!name){ msg.innerText = "請輸入姓名"; return; }
+
+  msg.innerText = "儲存中...";
+
+  try{
+    const res = await fetch("/test/api/add_player.php", {
+      method: "POST",
+      headers: { "Content-Type":"application/json" },
+      body: JSON.stringify({ id, name })
+    });
+
+    const text = await res.text();
+
+    if(!res.ok){
+      msg.innerText = "新增失敗: " + text;
+      return;
+    }
+
+    msg.innerText = "✅ 新增成功！編號=" + id + "，姓名=" + name;
+
+    // 清姓名、重新取得下一號
+    document.getElementById("newName").value = "";
+    await loadNextId();
+  }catch(e){
+    console.error(e);
+    msg.innerText = "新增失敗（請看 Console）";
+  }
+}
+window.addEventListener("load", () => {
+  const savedId = localStorage.getItem("userId");
+  const savedName = localStorage.getItem("userName");
+  if(savedId && savedName){
+    document.getElementById("userName").innerText = savedName;
+    document.getElementById("loginBox").style.display = "none";
+    document.getElementById("app").style.display = "block";
+  }
+
+  loadNextId(); // ✅ 新增這行
+});
 
 </script>
 </body>
