--- a/index.html
+++ b/index.html
@@ -184,7 +184,31 @@
         <p>除錯訊息: <span id="debugText">無</span></p>
     </div>
 </div>
+<!-- Chart.js -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+<div class="box" id="reportBox" style="margin-top:15px;">
+  <h3>📈 學習成效追蹤</h3>
+
+  <div style="display:flex; gap:10px; justify-content:center; flex-wrap:wrap; align-items:center;">
+    <div>
+      <div style="font-size:14px; color:#bbb; text-align:left;">歌曲</div>
+      <select id="reportSong" style="padding:8px; width:260px;"></select>
+    </div>
+
+    <button onclick="loadReport()" style="padding:10px 18px;">更新圖表</button>
+  </div>
+
+  <div style="margin-top:15px;">
+    <canvas id="progressChart" height="120"></canvas>
+  </div>
+
+  <p style="color:#aaa; font-size:12px; margin-top:8px;">
+    以「每天最佳秒數（最短）」顯示進步趨勢。左邊：秒數；下方：日期
+  </p>
+</div>
+
+    
 <script>
 /* ================== 畫面切換 ================== */
 function showLogin() {
@@ -248,6 +272,8 @@ async function login() {
 
     msg.innerText = "";
     showApp();
+    loadReport();
+
   } catch (e) {
     console.error(e);
     msg.innerText = "登入失敗（請看 Console）";
@@ -567,6 +593,102 @@ async function finishGame() {
     stopGame();
   }, 200);
 }
+let progressChart = null;
+
+async function initReportSongList() {
+  const sel = document.getElementById("reportSong");
+  if (!sel) return;
+
+  sel.innerHTML = "";
+
+  // 第一個選項：全部歌曲
+  const optAll = document.createElement("option");
+  optAll.value = "";
+  optAll.textContent = "全部歌曲";
+  sel.appendChild(optAll);
+
+  try {
+    const res = await fetch("/test/api/get_songs.php", { cache: "no-store" });
+    if (!res.ok) throw new Error(await res.text());
+    const rows = await res.json();
+
+    rows.forEach(r => {
+      const opt = document.createElement("option");
+      opt.value = r.song_name;
+      opt.textContent = r.song_name;
+      sel.appendChild(opt);
+    });
+  } catch (e) {
+    console.error(e);
+    // 不致命：沒歌單就不顯示也可以
+  }
+}
+
+async function loadReport() {
+  const playerId = localStorage.getItem("userId");
+  if (!playerId) {
+    alert("請先登入玩家再查看報表");
+    return;
+  }
+
+  const songName = document.getElementById("reportSong")?.value || "";
+
+  const url = new URL("/test/api/get_scores.php", window.location.origin);
+  url.searchParams.set("player_id", playerId);
+  if (songName) url.searchParams.set("song_name", songName);
+
+  const res = await fetch(url.toString(), { cache: "no-store" });
+  const text = await res.text();
+
+  if (!res.ok) {
+    console.error(text);
+    alert("讀取報表失敗: " + text);
+    return;
+  }
+
+  const payload = JSON.parse(text);
+  const data = payload.data || [];
+
+  const labels = data.map(x => x.d); // 日期
+  const values = data.map(x => Number(x.best_seconds)); // 秒數(越小越好)
+
+  const ctx = document.getElementById("progressChart");
+  if (!ctx) return;
+
+  if (progressChart) {
+    progressChart.destroy();
+    progressChart = null;
+  }
+
+  progressChart = new Chart(ctx, {
+    type: "line",
+    data: {
+      labels,
+      datasets: [{
+        label: songName ? `最佳秒數 - ${songName}` : "最佳秒數 - 全部歌曲",
+        data: values,
+        tension: 0.25,
+        pointRadius: 4
+      }]
+    },
+    options: {
+      responsive: true,
+      scales: {
+        y: {
+          title: { display: true, text: "秒數 (越低越好)" }
+        },
+        x: {
+          title: { display: true, text: "日期" }
+        }
+      }
+    }
+  });
+}
+
+// 頁面載入：初始化歌單；登入後你也可以自動 loadReport()
+window.addEventListener("load", async () => {
+  await initReportSongList();
+});
 
 /* ================== 頁面載入 ================== */
 window.addEventListener("load", () => {
