--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,7 +57,7 @@
 
     </h2>
 
-
+<div id="mainPage">
    <div class="box">
         <h3>1. 裝置連線與測試</h3>
         <p>LED板: <span id="ledStatus">未連線 ❌</span> <button class="btn-connect" onclick="connectLed()">連接</button></p>
@@ -169,74 +170,126 @@
         </select>
         <br><br>
         <button id="startBtn" class="btn-start" onclick="startGame()">開始遊戲！</button>
-    </div>
+        <br><br>
 
-    <div id="gameArea">
-        <div class="instruction">看到燈亮 -> 按下正確按鈕才會發聲！</div>
-        <div class="timer"><span id="timeDisplay">0.00</span> 秒</div>
-        <div class="note-display" id="currentNote">-</div>
-        <div id="logMsg" style="font-size: 14px; color: #aaa;">等待操作...</div>
-        <br>
-        <button onclick="stopGame()" style="background:#dc3545; color:white;">結束遊戲</button>
-    </div>
 
-    <div class="debug-area">
-        <p>除錯訊息: <span id="debugText">無</span></p>
-    </div>
 </div>
-<!-- Chart.js -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-<div class="box" id="reportBox" style="margin-top:15px;">
+<div id="reportPage" class="box" style="display:none; max-width:900px;">
   <h3>📈 學習成效追蹤</h3>
 
-  <div style="display:flex; gap:10px; justify-content:center; flex-wrap:wrap; align-items:center;">
-    <div>
-      <div style="font-size:14px; color:#bbb; text-align:left;">歌曲</div>
-      <select id="reportSong" style="padding:8px; width:260px;"></select>
-    </div>
-
+  <div style="display:flex; gap:12px; justify-content:center; align-items:center; flex-wrap:wrap;">
+    <label>歌曲</label>
+    <select id="reportSongSelect" style="padding:10px; font-size:16px; min-width:240px;"></select>
     <button onclick="loadReport()" style="padding:10px 18px;">更新圖表</button>
+    <button onclick="backToMain()" style="padding:10px 18px; background:#555; color:#fff;">返回遊戲</button>
   </div>
 
-  <div style="margin-top:15px;">
-    <canvas id="progressChart" height="120"></canvas>
+  <div style="margin-top:18px; background:#222; padding:12px; border-radius:10px;">
+    <canvas id="reportChart" height="120"></canvas>
   </div>
 
-  <p style="color:#aaa; font-size:12px; margin-top:8px;">
-    以「每天最佳秒數（最短）」顯示進步趨勢。左邊：秒數；下方：日期
+  <p style="margin-top:10px; color:#aaa; font-size:14px;">
+    顯示「每天最佳秒數（最短）」趨勢：左邊=秒數、下方=日期
   </p>
 </div>
 
     
 <script>
 /* ================== 畫面切換 ================== */
+/* ================== 畫面切換 ================== */
 function showLogin() {
   document.getElementById("app").style.display = "none";
   document.getElementById("loginBox").style.display = "block";
-  document.getElementById("addBox").style.display = "block";
+
+  // ✅ 登入畫面要看到新增人員
+  const addBox = document.getElementById("addBox");
+  if (addBox) addBox.style.display = "block";
+
+  // ✅ 追蹤頁一定要藏起來
+  const rp = document.getElementById("reportPage");
+  if (rp) rp.style.display = "none";
 }
 
 function showApp() {
   document.getElementById("loginBox").style.display = "none";
-  document.getElementById("addBox").style.display = "none";
+
+  const addBox = document.getElementById("addBox");
+  if (addBox) addBox.style.display = "none";
+
   document.getElementById("app").style.display = "block";
+
+  // ✅ 進 app 預設顯示主畫面（遊戲畫面）
+  showMainPage();
+}
+
+function showMainPage() {
+  const main = document.getElementById("mainPage");
+  const rp = document.getElementById("reportPage");
+
+  if (main) main.style.display = "block";
+  if (rp) rp.style.display = "none";
+}
+
+function openReport() {
+  // ✅ 一定要登入才可以開
+  const uid = localStorage.getItem("userId");
+  const uname = localStorage.getItem("userName");
+  if (!uid || !uname) {
+    alert("請先登入後才能查看學習成效追蹤");
+    showLogin();
+    return;
+  }
+
+  const main = document.getElementById("mainPage");
+  const rp = document.getElementById("reportPage");
+
+  if (main) main.style.display = "none";
+  if (rp) rp.style.display = "block";
+
+  // 進追蹤頁時自動載入
+  loadReport();
+}
+
+function backToMain() {
+  showMainPage();
 }
 
 /* ================== 登出 ================== */
 function logout() {
-  try { stopGame(); } catch(e) {}
+  try { stopGame(); } catch (e) {}
 
   localStorage.removeItem("userId");
   localStorage.removeItem("userName");
 
-  document.getElementById("idInput").value = "";
-  document.getElementById("nameInput").value = "";
-  document.getElementById("loginMsg").innerText = "";
-  document.getElementById("userName").innerText = "---";
+  // 清登入欄位
+  const idInput = document.getElementById("idInput");
+  const nameInput = document.getElementById("nameInput");
+  if (idInput) idInput.value = "";
+  if (nameInput) nameInput.value = "";
+
+  const loginMsg = document.getElementById("loginMsg");
+  if (loginMsg) loginMsg.innerText = "";
+
+  // 清上方玩家顯示
+  const userName = document.getElementById("userName");
+  if (userName) userName.innerText = "---";
 
   showLogin();
 }
+
+/* ================== 頁面載入 ================== */
+window.addEventListener("load", () => {
+  const savedId = localStorage.getItem("userId");
+  const savedName = localStorage.getItem("userName");
+
+  if (savedId && savedName) {
+    document.getElementById("userName").innerText = `${savedId}｜${savedName}`;
+    showApp();
+  } else {
+    showLogin();
+  }
+});
+
 
 /* ================== API：查玩家 ================== */
 async function fetchUserById(id) {
